<resources>
    <string name="app_name">ActivityLifecycle Challenge</string>
    <string name="button_main">Send</string>
    <string name="activity2_name">Second Activity</string>
    <string name="text_header">Shopping List</string>
    <string name="button_second">Reply</string>
    <string name="item_header">Item List</string>
    <string name="editText_main">Enter Your Message Here!</string>
    <string name="editText_second">Enter Your Reply Here</string>
    <string name="text_header_reply">Reply Received</string>
    <string name="cheese">Cheese</string>
    <string name="rice">Rice</string>
    <string name="apples">Apples</string>
    <string name="meat">Meat</string>
    <string name="potato">Potato</string>
    <string name="milk">Milk</string>
    <string name="banana">Banana</string>
    <string name="orange">Orange</string>
    <string name="grapes">Grapes</string>
    <string name="cola">Cola</string>
</resources>